# AsistenteAgendamientoCitas

./: .coverage  .pre-commit-config.yaml  README.md  Test.py  client_secret_app_escritorio_oauth.json  coverage.xml  main.py  models.py  pyproject.toml  python.yml  token.json
.github/workflows/: python.yml
AccesoDatos/: Mongo_Connection.py  appointment_repository.py
Infraestructura/: .env  AvoidCircularImport.py  agenda.py  langchain_tools.py  models.py  testAddPatientData.py  token.json
LogicaNegocio/: langchain_agents.py  langchain_executor.py
Presentacion/: main.py
agents/: langchain_agents.py  langchain_executor.py  langchain_tools.py
app/: test.py
app/adapters/: agenda.py  repository.py  token.json
app/adapters/langchain/: langchain_agents.py  langchain_executor.py  langchain_tools.py
app/domain/: model.py
app/service/: agent_manager.py
app/utils/: aws_dynamo.py
htmlcov/: Test_py.html  class_index.html  function_index.html  index.html  status.json  z_0278ab027e2f65e1_Mongo_Connection_py.html  z_0278ab027e2f65e1_patient_model_py.html  z_4febbac3716e9191_AvoidCircularImport_py.html  z_4febbac3716e9191_agenda_py.html  z_4febbac3716e9191_langchain_tools_py.html  z_4febbac3716e9191_models_py.html  z_f94a15ed0ffd54ad_langchain_agents_py.html  z_f94a15ed0ffd54ad_langchain_executor_py.html
tests/: test.py  test_main.py
