[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["jval7 <jhonvalderramaa7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.18"
langchain = "^0.0.345"
openai = "^1.3.7"
boto3 = "^1.34.39"
pydantic = "^2.6.1"
black = "^24.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
